# vibedom

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: ARCHITECTURE.md  TESTING.md  USAGE.md  technical-debt.md
docs/plans/: 2026-02-13-ai-agent-sandbox-design.md  2026-02-13-ai-agent-sandbox-phase1.md  2026-02-14-dlp-presidio-integration.md  2026-02-14-git-bundle-workflow.md  2026-02-14-https-support-design.md  2026-02-14-https-support.md  2026-02-15-apple-container-migration.md  2026-02-15-dlp-scrubber-fixes.md  2026-02-16-vibedom-usability-implementation-plan.md  2026-02-16-vibedom-usability-improvements.md  2026-02-18-helper-commands-design.md  2026-02-18-helper-commands-implementation-plan.md  (+7 more)
lib/vibedom/: __init__.py  vm.py  (+11 more)
tests/: helpers.py  test_cli.py  test_cli_attach.py  test_cli_config_cloudflare.py  test_cli_init.py  test_cli_merge.py  test_cli_proxy.py  test_cli_reload_whitelist.py  test_cli_review.py  test_cli_run.py  test_container_dockerfiles.py  test_container_state.py  test_dlp_scrubber.py  test_git_workflow.py  test_gitleaks.py  test_global_config.py  test_https_proxy.py  test_integration.py  test_list.py  test_mitmproxy_addon.py  test_project_config.py  test_proxy.py  test_proxy_manager.py  test_prune.py  test_review_ui.py  test_session.py  test_session_cleanup.py  test_session_registry.py  test_session_state.py  test_ssh_keys.py  test_startup_git_identity.py  test_startup_live_mode.py  test_sync.py  test_vm.py  test_whitelist.py  test_words.py
vm/: Dockerfile.alpine  build.sh  dlp_scrubber.py  mitmproxy.py  mitmproxy_addon.py  startup.sh
(+9 files in other folders)
