[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vibedom"
version = "0.1.1"
description = "Secure AI agent sandbox for Apple Silicon"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
vibedom = "vibedom.cli:main"

[tool.setuptools.packages.find]
where = ["lib"]

[tool.setuptools.package-data]
vibedom = ["container/*", "config/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["lib", "lib/vibedom/container"]
python_files = "test_*.py"
